feat(backend): implement redirect-based payment gateway with webhook confirmation
## Overview
Refactor purchase flow from direct payment processing to redirect-based mock
payment gateway pattern, aligning with real payment providers (Stripe/ECPay).

## New Components

### Controllers
- MockPaymentController: Mock payment gateway UI with checkout/confirm/cancel
- PaymentWebhookController: Receives async payment confirmation webhooks

### Entities & DTOs
- CheckoutSession: Tracks payment gateway sessions with expiration
- CheckoutSessionStatus: PENDING, COMPLETED, CANCELLED, EXPIRED
- CreateCheckoutRequest/PaymentWebhookRequest/WebhookResponse DTOs
- PurchaseOrderResponse: Added checkoutUrl, currency, expiresAt, resumed fields

### Services
- MockPaymentGatewayService: Creates/manages checkout sessions, generates URLs
- PaymentWebhookService: Processes webhooks, updates order status, creates UserPurchase

### Exceptions
- CheckoutSessionNotFoundException
- InvalidWebhookSecretException
- SessionExpiredException

### Database Migrations
- V20251127000004: Add checkout_session_id, expires_at to purchase_orders
- V20251127000005: Create checkout_sessions table

### Templates
- checkout.html: Mock payment form with success/cancel buttons
- expired.html: Session expiration error page

## Modified Components

### PurchaseController
- Removed /pay endpoint (gateway handles payment)
- createPurchase now returns checkoutUrl for redirect
- Returns 200 for resumed pending orders, 201 for new orders

### PurchaseService
- createPurchaseOrder: Creates checkout session, returns checkoutUrl
- Handles existing pending orders (resume or expire)
- Changed timestamps from LocalDateTime to Instant

### PurchaseStatus
- Added EXPIRED status for timed-out orders

### SecurityConfig
- Permit /api/webhooks/payment and /mock-payment/** endpoints

## Test Updates
- PurchaseControllerTest: Updated for redirect flow
- PurchaseE2ETest: Full gateway redirect and webhook flow
- PurchaseServiceTest: